Docker issue fix